add classes to target elements

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!doctype html>
+<html lang=en>
+  <head>
+    <meta charset=utf-8>
+    <title>Kia kodarrrrr</title>
     <link href="./main.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1>kia kodar...</h1>
+    <div class="inputSection">
+      <div class="inputs">
+        <input placeholder="something"></input>
+      </div>
+      <button class="addOption">add</button>
+    </div>
+    <button>go</button>
+  </body>
+</html>
